# tellMeMore

./: CMakeLists.txt  CMakeLists.txt~  README.md  matlabknn2.m
.svn/: wc.db
bak/include/: pc_segmentation_old.hpp  region_growing_custom_color.hpp  rgb_plane_coefficient_comparator.h
bak/src/: ircp_loop.cpp  ircp_loop2.cpp  offlineProc.cpp  online_segmentation.cpp  openni_organized_multi_plane_segmentation.cpp  pcSavePython.cpp  viewAndProcess.cpp
erman/: e
files/: a_ev11.2.txt  a_ev12.2.txt  a_ev13.2.txt  a_ev14.2.txt  a_ev15.2.txt  a_ev2.2.txt  a_ev3.2.txt  a_ev4.2.txt  a_ev5.2.txt  a_ev6.2.txt  a_ev7.2.txt  a_ev8.2.txt  a_ev9.2.txt  a_ev_1.2.txt  a_ev_15.2.txt  altan.2.txt  artikred.2.txt  asas.2.txt  atest.2.txt  atest2.2.txt  bidaha.2.txt  bigbluecylinder0.2.txt  bigbluecylinder1.2.txt  bigbluecylinder2.2.txt  bigbluecylinder3.2.txt  bigbluecylinder4.2.txt  bigbluecylinder5.2.txt  bigbluecylinder6.2.txt  bigbluecylinder7.2.txt  bigbrowncube0.2.txt  bigbrowncube1.2.txt  bigbrowncube2.2.txt  bigyellowsphere0.2.txt  bigyellowsphere10.2.txt  bigyellowsphere11.2.txt  bigyellowsphere12.2.txt  bigyellowsphere13.2.txt  bigyellowsphere14.2.txt  bigyellowsphere2.2.txt  bigyellowsphere3.2.txt  (+356 more)
include/: PcFeatures.h  common.hpp  ircpHandler.hpp  misc_structures.hpp  objectFeatures.hpp  pc_segmentation.hpp  rotcalipers.h  serviceHelper.hpp  utils.hpp  utils_pcl_ros.hpp
src/: def_loop.cpp  ircpHandler.cpp  offlineProcV2.cpp  pc_segmentation.cpp  ros_no_ircp.cpp  servideHelper.cpp  utils.cpp  utils_pcl_ros.cpp
swig/: CMakeLists.txt  pcSavePython.i  pcSavePython.py  pcSavePython_wrap.cxx
